Fix background-color issues and add spacing between main elements

--- a/src/App.css
+++ b/src/App.css
@@ -13,16 +13,10 @@ input {
 }
 
 .container {
-    height: 100vh;
     display: flex;
-    /*     display: grid; 
-    grid-template-columns: 150px 500px 1.5fr; 
-    grid-template-rows: 1fr 1fr 1fr; 
-    gap: 0px 0px; 
-    grid-template-areas: 
-      "Sidebar Input Output"
-      "Sidebar Input Output"
-      "Sidebar Input Output";  */
+    justify-content: space-evenly;
+    width: 100%;
+    height: 100%;
     color: black;
 }
 
@@ -31,7 +25,12 @@ input {
 **************************************/
 
 .input-container {
-    grid-area: Input;
+    max-width: 500px;
+    width: 100%;
+    margin: 3rem 0;
+    padding: 3rem 1rem;
+    background-color: white;
+    border-radius: 1.6rem;
 }
 
 /** PERSONAL DETAILS **/
@@ -57,21 +56,4 @@ input {
 .contact-container > input {
     height: 3rem;
     width: 45%;
-}
-
-/*************************************
-********** OUTPUT CONTAINER **********
-**************************************/
-
-.output-container {
-    
-}
-
-
-.resume-paper {
-    width: 600px;
-    height: 800px;
-    margin: 1rem;
-    background-color: white;
-    box-shadow: 0 0 0.5rem black;
 }
